<resources>
    <string name="app_name">HW1</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="change_contact">Change Contact</string>
    <string name="change_sound">Change Sound</string>
    <string name="contact_img_desc">Contact Image</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sound1">Sound1</string>
    <string name="sound2">Sound2</string>
    <string name="sound3" >Sound3</string>
    <string name="sound4">Sound4</string>
    <string name="sound5">Sound5</string>
    <string name="sound6">Sound6</string>
    <string name="sound7">Sound7</string>
    <string name="sound8">Sound8</string>
    <string name="back_message">lel</string>
    <string name="contact1">Contact1</string>
    <string name="contact2">Contact2</string>
    <string name="contact3">Contact3</string>
    <string name="contact4">Contact4</string>
    <string name="contact5">Contact5</string>
    <string name="contact6">Contact6</string>
    <string name="contact7">Contact7</string>
    <string name="contact8">Contact8</string>
</resources>
